# neercs

./: Makefile.am  configure.ac  neercs.sln
neercs/: .gitignore  Makefile.am  neercs.cpp  neercs.h  neercs.vcxproj  neercs.vcxproj.filters
neercs/old/: actions.c  ansi.c  attach.c  client.c  configuration.c  effects.c  grab.c  help.c  input.c  lock.c  main.c  mini-client.c  mini-neercs.c  mini-neercs.h  mini-server.c  mini-socket.c  mini-socket.h  mygetopt.c  mygetopt.h  mytrace.c  mytrace.h  neercs.h  recurrent.c  screen_list.c  screens.c  screensaver.c  server.c  term.c  widgets.c  widgets.h  wm.c  wm.cpp
neercs/old/python/: interpreter.c  py_module.c  py_module.h
neercs/term/: ansi.cpp  pty.cpp  pty.h  term.cpp  term.h
neercs/video/: blurh.lolfx  blurv.lolfx  color.lolfx  copper.lolfx  glow.lolfx  mirror.lolfx  noise.lolfx  postfx.lolfx  radial.lolfx  remanence.lolfx  remanency.lolfx  render.cpp  render.h  simple.lolfx  text-render.cpp  text-render.h  text.lolfx
